shifted toastr message up by a few pixels to avoid covering action buttons

--- a/src/renderer/css/preferences.css
+++ b/src/renderer/css/preferences.css
@@ -135,3 +135,5 @@ footer {
 }
 
 footer > button:last-of-type { margin-left: auto; }
+
+.toast-bottom-right { bottom: 66px; }
