--- a/src/renderer/css/presets.css
+++ b/src/renderer/css/presets.css
@@ -13,10 +13,10 @@ main {
   display: grid;
   grid-template-columns: minmax(243px, 1fr) 2fr;
   column-gap: 12px;
-  height: 100%;
 }
 
 .preset-selector {
+  overflow: auto;
   padding: 9px 5px;
   font-size: 12px;
 }
@@ -79,3 +79,5 @@ footer {
   display: flex;
 	column-gap: 12px;
 }
+
+.toast-bottom-right { bottom: 66px; }
